[package]
name = "ax"
version = "1.0.0"
authors = ["Carson Derr <cakub6@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = "3.0.0-beta"
ax_derive = { path = "./ax_derive", version = "1" }

[workspace]
members = [
  ".",
  "ax_derive"
]

[profile.release]
# Tell `rustc` to apply all optimizations regardless of code size.
opt-level = 3
lto = true
