[package]
name = "ax_derive"
version = "1.0.0"
edition = "2018"
authors = [
	"Carson Derr <cakub6@gmx.com>",
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "Play multiple games in the terminal, derive crate."
repository = "https://github.com/Zaba505/ax/tree/master/ax_derive"
documentation = "https://docs.rs/ax_derive"
keywords = [
	"ax",
	"derive",
	"proc_macro"
]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "1.0.69", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.26"
proc-macro-error = "1"
